# CompPract

./: КП тг-бот.docx
LR10/: КП ЛР-10 .docx
LR11/: README.md  private_key.pem  run.replit
LR11/django_app/: manage.py  requirements.txt
LR11/django_app/django_app/: settings.py  urls.py  views.py
LR11/fastapi_app/: main.py  requirements.txt
LR11/static/: app.js  style.css
LR11/templates/: index.html
LR17/: README.md
LR17/calc-main/: calc-history.log.txt  pyproject.toml
LR17/calc-main/tests/: test_core.py
LR5/: ЛР5.docx
LR6/: README.md  app.py  link
lr12/: lr12.md
lr16/: lr16.md  main.py
ЛР9/: КП ЛР-9.docx
