[tool.poetry]
name = "calc"
version = "0.1.0"
description = "Calculator project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "calculator", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"
pdoc = "^15.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
pylint = "^3.3.7"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]